修改版号去掉'BUILD'

--- a/initializr-generator/pom.xml
+++ b/initializr-generator/pom.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>io.spring.initializr</groupId>
 		<artifactId>initializr</artifactId>
-		<version>0.7.0.BUILD-SNAPSHOT</version>
+		<version>0.7.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>initializr-generator</artifactId>
 	<name>Spring Initializr :: Generator</name>
@@ -90,16 +92,16 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<distributionManagement>
-        <repository>
-            <id>landray-release</id>
-            <url>http://maven.landray.com.cn/nexus/content/repositories/releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>landray-snapshot</id>
-            <url>http://maven.landray.com.cn/nexus/content/repositories/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
+		<repository>
+			<id>landray-release</id>
+			<url>http://192.168.50.18:8081/repository/maven-releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>landray-snapshot</id>
+			<url>http://192.168.50.18:8081/repository/maven-snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 </project>
